<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="py.com.cleito.bank.CreateUser">

    <TextView
        android:id="@+id/titleCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_create_user"
        android:textSize="20sp"
        android:padding="5dp"/>

    <LinearLayout
        android:id="@+id/lUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleCreateUser">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/label_usuario_e"/>
        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lUser">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/label_password_e"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:password="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lPassword">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/label_password_confirm_e"/>

        <EditText
            android:id="@+id/edtConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:password="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lBotonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lConfirmPassword">

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/limpiar"/>

        <Button
            android:id="@+id/btnCrearUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/crear_usuario"/>

    </LinearLayout>


</RelativeLayout>
