<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faa519"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/greybackground">

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/title_activity_main"
        android:textColor="#2683c2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/lUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleMain">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/label_usuario_e"/>
        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lUser">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/label_password_e"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:password="true"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lBotonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnCrearUsuario"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/limpiar"
            android:background="@drawable/btn"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/ingresar"
            android:background="@drawable/btn"
            android:textColor="#fff"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCrearUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_usuario"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn"
        android:textColor="#fff"/>

</RelativeLayout>
</LinearLayout>