<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faa519"
    tools:context="py.com.cleito.bank.ATM">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greybackground">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/welcome"
            android:textColor="#2683c2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/userLogged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/userLogged"
            android:padding="5dp"
            android:textColor="#2683c2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userLogged"
            android:padding="5dp"
            android:text="@string/instruction"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/edtMonto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/instruction"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblGsMonto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instruction"
            android:layout_toRightOf="@id/edtMonto"
            android:text="@string/label_gs" />

        <TextView
            android:id="@+id/lblBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_balance_e"
            android:layout_below="@id/edtMonto"/>

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtMonto"
            android:layout_toRightOf="@id/lblBalance" />

        <TextView
            android:id="@+id/lblGsBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtMonto"
            android:layout_toRightOf="@id/txtBalance"
            android:text="@string/label_gs" />

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDepositar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/label_depositar"
                android:background="@drawable/btn"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/btnRetirar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/label_retirar"
                android:background="@drawable/btn"
                android:textColor="#fff"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>